# codequest

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.portfolio/: project.json
examples/: quest_markdown_scanner.yaml  quest_repo_init_lite.yaml
src/codequest/: __init__.py  ai_review.py  cli.py  llm.py  models.py  quest_generation.py  questionnaire.py  repo_analyzer.py  scoring.py  storage.py  verifier.py  vscode.py
tests/: test_cli.py  test_quest_generation.py  test_repo_analyzer.py  test_scoring.py  test_storage.py  test_verifier.py
